// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps Steps extraVue demo works fine 1`] = `
<div
  class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive steps-demos-extra"
  status="process"
>
  
  <div
    class="t-steps-item t-steps-item--process"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--process"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤1
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          
          <button
            class="t-button t-size-s t-button--variant-base t-button--theme-primary"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
               下一步 
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤2
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤3
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤4
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Steps Steps iconVue demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--default-anchor"
>
  
  <div
    class="t-steps-item t-steps-item--finish"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--finish"
      >
        <svg
          class="t-icon t-icon-login icon-margin"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8.48 7.5L6.23 5.25l.7-.7 3.1 3.1c.2.2.2.5 0 .7l-3.1 3.1-.7-.7L8.48 8.5H1v-1h7.48z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4 5V3h8v10H4v-2H3v2.5c0 .28.22.5.5.5h9a.5.5 0 00.5-.5v-11a.5.5 0 00-.5-.5h-9a.5.5 0 00-.5.5V5h1z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          登录
        </div>
        <div
          class="t-steps-item__description"
        >
          已完成状态
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--process"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--process"
      >
        <svg
          class="t-icon t-icon-cart icon-margin"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M1 3h1.58l1.39 8.33c.06.39.4.67.78.67H14v-1H4.92L4.6 9h8.63a.8.8 0 00.78-.6l.85-3.4a.8.8 0 00-.78-1H3.76l-.23-1.33A.8.8 0 002.75 2H1v1zm12.07 5H4.42l-.5-3h9.9l-.75 3zM4.75 14.5a.75.75 0 100-1.5.75.75 0 000 1.5zM12.81 14.5a.75.75 0 100-1.5.75.75 0 000 1.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          购物
        </div>
        <div
          class="t-steps-item__description"
        >
          进行中状态
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <svg
          class="t-icon t-icon-wallet icon-margin"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 4.5h2a1 1 0 011 1V12a1 1 0 01-1 1h-11a1 1 0 01-1-1V3a1 1 0 011-1h8a1 1 0 011 1v1.5zm-1-1.5h-8v1.5h8V3zm3 2.5h-11V12h11V5.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          支付
        </div>
        <div
          class="t-steps-item__description"
        >
          未开始
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <svg
          class="t-icon t-icon-check-circle icon-margin"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4.5 8.2L7 10.7l4.5-4.5-.7-.7L7 9.3 5.2 7.5l-.7.7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.11 2.18a7 7 0 117.78 11.64A7 7 0 014.1 2.18zm.56 10.8a6 6 0 106.66-9.97A6 6 0 004.67 13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          完成
        </div>
        <div
          class="t-steps-item__description"
        >
          未开始
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Steps Steps noSequenceVue demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--dot-anchor"
>
  
  <div
    class="t-steps-item t-steps-item--finish"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--finish"
      >
        <!---->
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          已完成的步骤
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--process"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--process"
      >
        <!---->
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          进行中的步骤
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <!---->
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          未进行的步骤
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <!---->
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          未进行的步骤
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Steps Steps optionsVue demo works fine 1`] = `
<div
  class="t-steps t-steps--horizontal t-steps--default-anchor"
>
  
  <div
    class="t-steps-item t-steps-item--finish"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--finish"
      >
        <span
          class="t-steps-item__icon--number"
        >
          <svg
            class="t-icon t-icon-check"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤一
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--process"
  >
    <div
      class="t-steps-item__inner "
    >
      <div
        class="t-steps-item__icon t-steps-item--process"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤二
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤三
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps-item t-steps-item--default"
  >
    <div
      class="t-steps-item__inner t-steps-item--clickable"
    >
      <div
        class="t-steps-item__icon t-steps-item--default"
      >
        <span
          class="t-steps-item__icon--number"
        >
          0
        </span>
      </div>
      <div
        class="t-steps-item__content"
      >
        <div
          class="t-steps-item__title"
        >
          步骤四
        </div>
        <div
          class="t-steps-item__description"
        >
          这里是提示文字
        </div>
        <div
          class="t-steps-item__extra"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Steps Steps sequenceVue demo works fine 1`] = `
<div>
  <!-- 如果 t-step-item 没有传入 value，则使用 index 作为唯一标识 -->
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  >
    
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--process"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <br />
  <!-- 使用 options 渲染步骤条 -->
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  >
    
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            点击切换步骤
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            点击切换步骤
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--process"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这是进行中的步骤
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner t-steps-item--clickable"
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            点击切换步骤
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps Steps statusVue demo works fine 1`] = `
<div>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  >
    
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--process"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    style="margin: 16px 0px;"
  />
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor"
  >
    
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--finish"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-check"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--error"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--error"
        >
          <span
            class="t-steps-item__icon--number"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            错误的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            优先展示\`t-step\`中设置的 status
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--default"
    >
      <div
        class="t-steps-item__inner "
      >
        <div
          class="t-steps-item__icon t-steps-item--default"
        >
          <span
            class="t-steps-item__icon--number"
          >
            0
          </span>
        </div>
        <div
          class="t-steps-item__content"
        >
          <div
            class="t-steps-item__title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item__description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item__extra"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Steps Steps verticalNoSequenceVue demo works fine 1`] = `
<div
  class="setps-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-steps t-steps--vertical t-steps--dot-anchor t-steps--positive"
    >
      
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--finish"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--process"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="t-steps t-steps--vertical t-steps--dot-anchor t-steps--reverse"
    >
      
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--finish"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--process"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <!---->
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Steps Steps verticalSequenceVue demo works fine 1`] = `
<div
  class="setps-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
    >
      
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--finish"
          >
            <span
              class="t-steps-item__icon--number"
            >
              <svg
                class="t-icon t-icon-check"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--process"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      style="margin: 16px 0px;"
    />
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--reverse"
    >
      
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--finish"
          >
            <span
              class="t-steps-item__icon--number"
            >
              <svg
                class="t-icon t-icon-check"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--process"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--default"
      >
        <div
          class="t-steps-item__inner "
        >
          <div
            class="t-steps-item__icon t-steps-item--default"
          >
            <span
              class="t-steps-item__icon--number"
            >
              0
            </span>
          </div>
          <div
            class="t-steps-item__content"
          >
            <div
              class="t-steps-item__title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item__description"
            >
              这里是提示文字
            </div>
            <div
              class="t-steps-item__extra"
            >
              <!---->
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
